# bozio_wasmer_simulations

./: 404.html  README.md  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation-ci.yml
api/CaptationMarginaleSimulator/: index.html
api/CoreSimulation/: index.html
api/DescriptionBuilder/: index.html
api/EmpiricalSimulator/: index.html
api/Loader/: index.html
api/PPVReintegrationSimulator/: index.html
api/ReformSimulation/: index.html
api/TheoreticalSimulation/: index.html
api/TheoreticalSimulator/: index.html
api/add_weights_eqtp_accos/: index.html
api/build_data_evol_ct/: index.html
api/build_data_evol_emploi/: index.html
api/create_and_apply_structural_reform_ag/: index.html
api/load_dads/: index.html
api/load_fare/: index.html
api/preprocess_dads_openfisca_ag/: index.html
api/preprocess_simulated_variables/: index.html
assets/stylesheets/: extra.css
bozio_wasmer_simulations/: __init__.py
bozio_wasmer_simulations/datasets/: __init__.py  base.py  loaders.py
bozio_wasmer_simulations/description/: __init__.py  base.py  datasets.py
bozio_wasmer_simulations/simulation/: __init__.py
data/: diffusion-zonages-zrd-2020.xls  distributions_2022_missionBW.xlsx  distributions_2023_missionBW.xlsx
docs/: index.md
docs/api/: CoreSimulation.md  (+16 more)
notebooks/: 0 - Simulations.ipynb  1 - Statistiques descriptives.ipynb  2 - Simulation théorique.ipynb
parameters/: description.json  elasticite.json  simulation.json
scripts/: simulate.py
search/: search_index.json
(+19 files in other folders)
